--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<app-navbar></app-navbar>
+<app-header></app-header>
+<main class="container-fluid">
   <div class="row">
-    <div class="col-md-12">
-      <app-header></app-header>
-    </div>
+    <app-shopping-list class="col-md-6 bg-info"></app-shopping-list>
+    <app-recipes class="col-md-6 bg-warning"></app-recipes>
   </div>
-</div>
+</main>
