Use the new components

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,1 +1,8 @@
-<h1>Shopping list</h1>
+<div class="row">
+  <!--<div class="col-xs-10 bg-secondary">-->
+  <div class="col-md-12 bg-secondary">
+    <app-shopping-edit></app-shopping-edit>
+    <hr>
+    <p>Shopping List</p>
+  </div>
+</div>
