--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
 <main class="container-fluid">
-  <div class="row">
-    <app-shopping-list class="col-md-6 bg-info"></app-shopping-list>
-    <app-recipes class="col-md-6 bg-warning"></app-recipes>
-  </div>
+  <app-recipes></app-recipes>
+  <app-shopping-list></app-shopping-list>
 </main>
