--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,1 +1,8 @@
-<h1>Recipe book</h1>
+<div class="row">
+  <div class="col-md-5  bg-info">
+    <app-recipe-list></app-recipe-list>
+  </div>
+  <div class="col-md-7  bg-warning">
+    <app-recipe-detail></app-recipe-detail>
+  </div>
+</div>
